Slider works better

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<script>
 
+
 	</script>
 </head>
 <body>
@@ -44,7 +45,7 @@
 
 	<section class="portfolio" id="portfolio">
 		<div class="full-port">
-			<div class="left-port clearfix">
+			<div class="left-port">
 				<div class="section-bar">
 					<h2>Portfolio</h2>
 				</div>
@@ -68,12 +69,16 @@
 						<img src="http://placehold.it/200x200" alt="">
 					</div>
 				</div>
-				</div>
+			</div>
 
-				<div class="right-port">
-					<p>Dog</p>
-				</div>
-		</div></section>
+			<div class="right-port">
+					<h2></h2>
+					<div class="port-details">
+
+					</div>
+			</div>
+		</div>
+	</section>
 
 		<section class="about" id="about">
 			<div class="section-bar">
