Adjusted buttons and working slider on portfolio

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 			<div class="right-port">
 					<h2></h2>
+					<div class="back-button"></div>
 					<div class="port-details">
 
 					</div>
@@ -98,9 +99,9 @@
 		<section class="contact" id="contact">
 			<h2>Contact Me</h2>
 			<div class="icon-container">
-				<div class="icon mail-icon">
-					<img src="icons/mail.svg" alt="">
-				</div>
+				<a href="mailto:JMitnik@gmail.com"><button class="icon mail-icon">
+						<img src="icons/mail.svg" alt="">
+					</button></a>
 				<div class="icon facebook-icon"></div>
 				<div class="icon linkedin-icon"></div>
 			</div>
