Added portfolio projects and slider start

--- a/index.html
+++ b/index.html
@@ -51,22 +51,47 @@
 				</div>
 				<div class="thumbnail-parent clearfix">
 					<div class="thumbnail">
-						<img src="http://placehold.it/200x200" alt="">
+						<span class="rollover"></span>
+						<img src="img\localweather.jpg" alt="">
+						<div class="context">
+							<h2 class="title">Local Weather Application</h2>
+							<p class="desc">This website describes the local weather.</p>
+						</div>
 					</div>
 					<div class="thumbnail">
-						<img src="http://placehold.it/200x200" alt="">
+						<img src="img\vivraim.jpg" alt="">
+						<div class="context">
+							<h2 class="title">Vivre et Aimer</h2>
+							<p class="desc">Life coach</p>
+						</div>
 					</div>
 					<div class="thumbnail">
-						<img src="http://placehold.it/200x200" alt="">
+						<img src="img\quotes.png" alt="">
+						<div class="context">
+							<h2 class="title">Quote Generator</h2>
+							<p class="desc">This generates quotes from famous personalities ranging between past and present.</p>
+						</div>
 					</div>
 					<div class="thumbnail">
-						<img src="http://placehold.it/200x200" alt="">
+						<img src="http://placehold.it/350x200" alt="">
+						<div class="context">
+							<h2 class="title">Placeholder</h2>
+							<p class="desc"></p>
+						</div>
 					</div>
 					<div class="thumbnail">
-						<img src="http://placehold.it/200x200" alt="">
+						<img src="http://placehold.it/350x200" alt="">
+						<div class="context">
+							<h2 class="title"></h2>
+							<p class="desc"></p>
+						</div>
 					</div>
 					<div class="thumbnail">
-						<img src="http://placehold.it/200x200" alt="">
+						<img src="http://placehold.it/350x200" alt="">
+						<div class="context">
+							<h2 class="title"></h2>
+							<p class="desc"></p>
+						</div>
 					</div>
 				</div>
 			</div>
