Added functions to find selected thumbnail

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<h2>Portfolio</h2>
 				</div>
 				<div class="thumbnail-parent clearfix">
-					<div class="thumbnail">
+					<div class="thumbnail" id="lwa">
 						<span class="rollover"></span>
 						<img src="img\localweather.jpg" alt="">
 						<div class="context">
@@ -58,14 +58,14 @@
 							<p class="desc">This website describes the local weather.</p>
 						</div>
 					</div>
-					<div class="thumbnail">
+					<div class="thumbnail" id="viv">
 						<img src="img\vivraim.jpg" alt="">
 						<div class="context">
 							<h2 class="title">Vivre et Aimer</h2>
 							<p class="desc">Life coach</p>
 						</div>
 					</div>
-					<div class="thumbnail">
+					<div class="thumbnail" id="qt">
 						<img src="img\quotes.png" alt="">
 						<div class="context">
 							<h2 class="title">Quote Generator</h2>
@@ -97,10 +97,11 @@
 			</div>
 
 			<div class="right-port">
-					<h2></h2>
-					<div class="back-button"></div>
+					<div class="back-button">
+					</div>
 					<div class="port-details">
-
+						<h3 class="thumb-title"></h3>
+						<img src="" alt="">
 					</div>
 			</div>
 		</div>
