Working Script to insert data based on thumbnail

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					</div>
 					<div class="port-details">
 						<h3 class="thumb-title"></h3>
-						<img src="" alt="">
+						<!-- <p class="port-desc"></p> -->
 					</div>
 			</div>
 		</div>
