Working Slider back and forth

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 						<img src="img\localweather.jpg" alt="">
 						<div class="context">
 							<h2 class="title">Local Weather Application</h2>
-							<p class="desc">This website describes the local weather.</p>
 						</div>
 					</div>
 					<div class="thumbnail" id="viv">
@@ -97,8 +96,8 @@
 			</div>
 
 			<div class="right-port">
-					<div class="back-button">
-					</div>
+					<button class="back-button">
+					</button>
 					<div class="port-details">
 						<h3 class="thumb-title"></h3>
 						<!-- <p class="port-desc"></p> -->
