--- a/index.html
+++ b/index.html
@@ -51,46 +51,41 @@
 				</div>
 				<div class="thumbnail-parent clearfix">
 					<div class="thumbnail" id="lwa">
-						<span class="rollover"></span>
+						<span class="overlay">
+							<h4 class="title">Local Weather Application</h4>
+						</span>
 						<img src="img\localweather.jpg" alt="">
-						<div class="context">
-							<h2 class="title">Local Weather Application</h2>
-						</div>
 					</div>
 					<div class="thumbnail" id="viv">
+						<span class="overlay">
+							<h4 class="title">Vivre et Aimer</h4>
+						</span>
 						<img src="img\vivraim.jpg" alt="">
-						<div class="context">
-							<h2 class="title">Vivre et Aimer</h2>
-							<p class="desc">Life coach</p>
-						</div>
 					</div>
 					<div class="thumbnail" id="qt">
+						<span class="overlay">
+							<h4 class="title">Famous Quotes Generator</h4>
+						</span>
 						<img src="img\quotes.png" alt="">
-						<div class="context">
-							<h2 class="title">Quote Generator</h2>
-							<p class="desc">This generates quotes from famous personalities ranging between past and present.</p>
-						</div>
 					</div>
 					<div class="thumbnail">
+						<span class="overlay">
+							<h4 class="title">Placeholder</h4>
+						</span>
 						<img src="http://placehold.it/350x200" alt="">
-						<div class="context">
-							<h2 class="title">Placeholder</h2>
-							<p class="desc"></p>
-						</div>
 					</div>
 					<div class="thumbnail">
+						<span class="overlay">
+							<h4 class="title">Placeholder</h4>
+						</span>
 						<img src="http://placehold.it/350x200" alt="">
-						<div class="context">
-							<h2 class="title"></h2>
-							<p class="desc"></p>
-						</div>
+
 					</div>
 					<div class="thumbnail">
+						<span class="overlay">
+							<h4 class="title">Placeholder</h4>
+						</span>
 						<img src="http://placehold.it/350x200" alt="">
-						<div class="context">
-							<h2 class="title"></h2>
-							<p class="desc"></p>
-						</div>
 					</div>
 				</div>
 			</div>
