Made clickable and working contact divs

--- a/index.html
+++ b/index.html
@@ -91,12 +91,18 @@
 			</div>
 
 			<div class="right-port">
-					<button class="back-button">
-					</button>
-					<div class="port-details">
-						<h3 class="thumb-title"></h3>
-						<!-- <p class="port-desc"></p> -->
+				<div class="right-port-wrap clearfix">
+					<div class="side-wrap clearfix">
+						<button class="back-button">
+						</button>
+
 					</div>
+
+						<div class="port-details clearfix">
+						<h3 class="thumb-title"></h3>
+							<!-- <p class="port-desc"></p> -->
+						</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -120,10 +126,14 @@
 			<h2>Contact Me</h2>
 			<div class="icon-container">
 				<a href="mailto:JMitnik@gmail.com"><button class="icon mail-icon">
-						<img src="icons/mail.svg" alt="">
+						<img src="icons/email.png" alt="">
 					</button></a>
-				<div class="icon facebook-icon"></div>
-				<div class="icon linkedin-icon"></div>
+				<a href="https://www.facebook.com/Johnny.Mitnik"><button class="icon facebook-icon">
+						<img src="icons/fb.png" alt="">
+				</button></a>
+				<a href="https://nl.linkedin.com/pub/jonathan-mitnik/100/573/<44></44>"><button class="icon linkedin-icon">
+					<img src="icons/li2.png" alt="">
+				</button></a>
 			</div>
 		</section>
 	</body>
