Working Portfolio slider, responsive, visit btn

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
 			<div class="right-port">
 				<div class="right-port-wrap clearfix">
+
 					<div class="side-wrap clearfix">
 						<button class="back-button">
 						</button>
@@ -101,6 +102,7 @@
 						<div class="port-details clearfix">
 						<h3 class="thumb-title"></h3>
 							<!-- <p class="port-desc"></p> -->
+							<button class="visit">Visit</button>
 						</div>
 				</div>
 			</div>
