Working portfolio section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="port-details clearfix">
 						<h3 class="thumb-title"></h3>
 							<!-- <p class="port-desc"></p> -->
-							<button class="visit">Visit</button>
+							<a class="visit" href=""><button class="visit2">Visit</button></a>
 						</div>
 				</div>
 			</div>
